--- a/templates/blog/post-detail.html
+++ b/templates/blog/post-detail.html
@@ -1,21 +1,23 @@
 {% extends "base.html" %}
-{% load blog_extras %}
+{% load blog_extras cache %}
 {% block content %}
-<h2>{{ post.title }}</h2>
-{% row %}
-    <div class="col">
-        {% include "blog/post-byline.html" %}
-    </div>
-{% endrow %}
-{% row %}
-    <div class="col">
-        {{ post.content|safe }}
-    </div>
-{% endrow %}
-{% include "blog/post-comments.html" %}
-{% row %}
-    {% col %}
-        {% recent_posts post %}
-    {% endcol %}
-{% endrow %}
+    <h2>{{ post.title }}</h2>
+    {% row %}
+        <div class="col">
+            {% include "blog/post-byline.html" %}
+        </div>
+    {% endrow %}
+    {% row %}
+        <div class="col">
+            {% cache 3600 recent_posts post %}
+                {% recent_posts post %}
+            {% endcache %}
+        </div>
+    {% endrow %}
+    {% include "blog/post-comments.html" %}
+    {% row %}
+        {% col %}
+            {% recent_posts post %}
+        {% endcol %}
+    {% endrow %}
 {% endblock %}
